--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: ' 科瑞杉'
 description: '正在从科瑞杉的折越节点向艾尔地表投放部队'
 keywords:
 author: Kherrisan
-language: en
+language: zh
 timezone: ''
 
 # URL
@@ -45,7 +45,7 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: true
+  enable: false
   line_number: true
   auto_detect: false
   tab_replace: ''
@@ -93,7 +93,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: nexmoe
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
