--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "version": "4.2.0"
   },
   "dependencies": {
+    "gulp": "^4.0.2",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.2",
     "hexo": "^4.0.0",
+    "hexo-filter-asset-inline": "^1.1.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
@@ -22,5 +29,10 @@
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-wordcount": "^6.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "gulp-babel": "^8.0.0"
   }
 }
