--- a/.github/workflows/hexo-ci.yml
+++ b/.github/workflows/hexo-ci.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g gulp hexo
+    - run: npm install -g gulp hexo-cli
     - run: npm install
     - run: hexo g
     - name: Commit files
