--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/nexmoe"]
 	path = themes/nexmoe
-	url = git@github.com:Kherrisan/hexo-theme-nexmoe.git
+	url = https://github.com/Kherrisan/hexo-theme-nexmoe.git
