--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: ' 科瑞杉'
 description: '正在从科瑞杉的折越节点向艾尔地表投放部队'
 keywords:
 author: Kherrisan
-language: zh
+language: zh-CN
 timezone: ''
 
 # URL
