--- a/package.json
+++ b/package.json
@@ -12,27 +12,30 @@
     "version": "4.2.0"
   },
   "dependencies": {
-    "bulma-stylus": "^0.8.0",
+    "gulp": "^4.0.2",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.2",
     "hexo": "^4.0.0",
-    "hexo-component-inferno": "^0.2.3",
     "hexo-filter-asset-inline": "^1.1.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
-    "hexo-wordcount": "^6.0.1",
-    "inferno": "^7.4.2",
-    "inferno-create-element": "^7.4.2",
-    "leancloud-storage": "^4.5.3",
-    "valine": "^1.4.3"
+    "hexo-wordcount": "^6.0.1"
   },
   "devDependencies": {
-    "lodash.template": ">=4.5.0",
-    "kind-of": ">=6.0.3"
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "gulp-babel": "^8.0.0",
+    "gulp-replace": "^1.0.0",
+    "kind-of": ">=6.0.3",
+    "lodash.template": ">=4.5.0"
   }
 }
