github ci action

--- a/.github/workflows/hexo-ci.yml
+++ b/.github/workflows/hexo-ci.yml
@@ -32,7 +32,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm i -g hexo-cli
     - run: npm i
-    - run: hexo clean && hexo g --debug
+    - run: hexo clean && hexo g --debug && gulp
     - name: Commit files
       run: |
         git add .
