--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -83,14 +83,13 @@ daovoice:  # 在线客服 Daovoice 参考：http://dashboard.daovoice.io
   appid: ''  # 应用ID设置
 
 aplayer:  # 音乐播放器，注意不能与 hexo-tag-aplayer 插件共用
-  enable: false
-  autoplay: false  # 音频自动播放
+  enable: true
+  autoplay: true  # 音频自动播放
   loop: 'all'  # 音频循环播放, 可选值: 'all', 'one', 'none'
   order: 'random'  # 播放顺序，可选值: 'list', 'random'
   theme: '#b7daff'  # 主题色
   songs:  # 歌曲列表，必须传入下列各参数，其中 url 与 cover 在本地需存于 source 目录，更多参数见文档：https://aplayer.js.org/#/zh-Hans/?id=%E5%8F%82%E6%95%B0
-    - { name: 'name', artist: 'artist', url: '/songs/test.mp3', cover: '/img/cover.jpg' }
-    - { name: 'name', artist: 'artist', url: 'https://...url.mp3', cover: 'https://...cover.jpg' }
+    - { name: '竈門炭治郎のうた', artist: '椎名豪', url: 'https://oss.kherrisan.cn/tanjiro.mp3', cover: 'https://oss.kherrisan.cn/20200509132030.png' }
 
 version:  # 主题版本相关
   check: true  # 每次生成页面后，检测主题是否为最新版本
