--- a/.github/workflows/hexo-ci.yml
+++ b/.github/workflows/hexo-ci.yml
@@ -47,7 +47,7 @@ jobs:
         github_token: ${{ secrets.CI_TOKEN }}
     - name: ssh deploy
       uses: easingthemes/ssh-deploy@v2.1.2
-      with:
+      env:
         # Private Key
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         # Remote host
