--- a/.github/workflows/hexo-ci.yml
+++ b/.github/workflows/hexo-ci.yml
@@ -57,4 +57,4 @@ jobs:
         # Source directory
         SOURCE: docs
         # Target directory
-        TARGET: /vaw/www/html
+        TARGET: /var/www/html
